# WVFLDR

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
wavefolder_plugin/include/: Parameters.h  PluginProcessor.h
wavefolder_plugin/src/: CMakeLists.txt  Parameters.cpp  PluginEditor.cpp  PluginProcessor.cpp
